[gd_scene load_steps=11 format=2]

[ext_resource path="res://3d-car0/vehicle.gd" type="Script" id=1]
[ext_resource path="res://3d-car0/material_verde.tres" type="Material" id=2]
[ext_resource path="res://3d-car0/material_rojo.tres" type="Material" id=3]
[ext_resource path="res://3d-car0/follow_camera.gd" type="Script" id=4]

[sub_resource type="PhysicsMaterial" id=1]
friction = 0.5

[sub_resource type="ArrayMesh" id=2]
surfaces/0 = {
"aabb": AABB( -0.0614569, -0.228035, -0.228035, 0.122914, 0.45608, 0.45607 ),
"array_data": PoolByteArray( 221, 171, 76, 51, 210, 43, 0, 60, 130, 0, 0, 0, 221, 171, 76, 51, 210, 171, 0, 60, 130, 0, 0, 0, 221, 171, 87, 49, 87, 49, 0, 60, 130, 0, 0, 0, 221, 171, 87, 49, 87, 177, 0, 60, 130, 0, 0, 0, 221, 171, 210, 43, 76, 179, 0, 60, 130, 0, 0, 0, 221, 171, 210, 171, 76, 179, 0, 60, 130, 0, 0, 0, 221, 171, 87, 177, 87, 177, 0, 60, 130, 0, 0, 0, 221, 171, 76, 179, 210, 171, 0, 60, 130, 0, 0, 0, 221, 171, 76, 179, 210, 43, 0, 60, 130, 0, 0, 0, 221, 171, 87, 177, 87, 49, 0, 60, 130, 0, 0, 0, 221, 171, 210, 171, 76, 51, 0, 60, 130, 0, 0, 0, 221, 171, 210, 43, 76, 51, 0, 60, 130, 0, 0, 0, 221, 43, 76, 51, 210, 43, 0, 60, 127, 0, 0, 0, 221, 43, 87, 49, 87, 49, 0, 60, 127, 0, 0, 0, 221, 43, 76, 51, 210, 171, 0, 60, 127, 0, 0, 0, 221, 43, 210, 43, 76, 51, 0, 60, 127, 0, 0, 0, 221, 43, 210, 171, 76, 51, 0, 60, 127, 0, 0, 0, 221, 43, 87, 177, 87, 49, 0, 60, 127, 0, 0, 0, 221, 43, 76, 179, 210, 43, 0, 60, 127, 0, 0, 0, 221, 43, 76, 179, 210, 171, 0, 60, 127, 0, 0, 0, 221, 43, 87, 177, 87, 177, 0, 60, 127, 0, 0, 0, 221, 43, 210, 171, 76, 179, 0, 60, 127, 0, 0, 0, 221, 43, 210, 43, 76, 179, 0, 60, 127, 0, 0, 0, 221, 43, 87, 49, 87, 177, 0, 60, 127, 0, 0, 0, 221, 171, 87, 177, 87, 177, 0, 60, 0, 193, 147, 0, 221, 171, 210, 171, 76, 179, 0, 60, 0, 193, 147, 0, 221, 43, 210, 171, 76, 179, 0, 60, 0, 193, 147, 0, 221, 43, 87, 177, 87, 177, 0, 60, 0, 193, 147, 0, 221, 171, 210, 43, 76, 51, 0, 60, 0, 0, 126, 0, 221, 171, 210, 171, 76, 51, 0, 60, 0, 0, 126, 0, 221, 43, 210, 171, 76, 51, 0, 60, 0, 0, 126, 0, 221, 43, 210, 43, 76, 51, 0, 60, 0, 0, 126, 0, 221, 171, 210, 171, 76, 179, 0, 60, 0, 0, 129, 0, 221, 171, 210, 43, 76, 179, 0, 60, 0, 0, 129, 0, 221, 43, 210, 43, 76, 179, 0, 60, 0, 0, 129, 0, 221, 43, 210, 171, 76, 179, 0, 60, 0, 0, 129, 0, 221, 171, 210, 171, 76, 51, 0, 60, 0, 193, 109, 0, 221, 171, 87, 177, 87, 49, 0, 60, 0, 193, 109, 0, 221, 43, 87, 177, 87, 49, 0, 60, 0, 193, 109, 0, 221, 43, 210, 171, 76, 51, 0, 60, 0, 193, 109, 0, 221, 171, 210, 43, 76, 179, 0, 60, 0, 63, 147, 0, 221, 171, 87, 49, 87, 177, 0, 60, 0, 63, 147, 0, 221, 43, 87, 49, 87, 177, 0, 60, 0, 63, 147, 0, 221, 43, 210, 43, 76, 179, 0, 60, 0, 63, 147, 0, 221, 171, 87, 177, 87, 49, 0, 60, 0, 147, 63, 0, 221, 171, 76, 179, 210, 43, 0, 60, 0, 147, 63, 0, 221, 43, 76, 179, 210, 43, 0, 60, 0, 147, 63, 0, 221, 43, 87, 177, 87, 49, 0, 60, 0, 147, 63, 0, 221, 171, 87, 49, 87, 177, 0, 60, 0, 109, 193, 0, 221, 171, 76, 51, 210, 171, 0, 60, 0, 109, 193, 0, 221, 43, 76, 51, 210, 171, 0, 60, 0, 109, 193, 0, 221, 43, 87, 49, 87, 177, 0, 60, 0, 109, 193, 0, 221, 171, 76, 179, 210, 43, 0, 60, 0, 130, 0, 0, 221, 171, 76, 179, 210, 171, 0, 60, 0, 130, 0, 0, 221, 43, 76, 179, 210, 171, 0, 60, 0, 130, 0, 0, 221, 43, 76, 179, 210, 43, 0, 60, 0, 130, 0, 0, 221, 171, 76, 51, 210, 43, 0, 60, 0, 109, 63, 0, 221, 171, 87, 49, 87, 49, 0, 60, 0, 109, 63, 0, 221, 43, 87, 49, 87, 49, 0, 60, 0, 109, 63, 0, 221, 43, 76, 51, 210, 43, 0, 60, 0, 109, 63, 0, 221, 171, 76, 51, 210, 171, 0, 60, 0, 127, 0, 0, 221, 171, 76, 51, 210, 43, 0, 60, 0, 127, 0, 0, 221, 43, 76, 51, 210, 43, 0, 60, 0, 127, 0, 0, 221, 43, 76, 51, 210, 171, 0, 60, 0, 127, 0, 0, 221, 171, 76, 179, 210, 171, 0, 60, 0, 147, 193, 0, 221, 171, 87, 177, 87, 177, 0, 60, 0, 147, 193, 0, 221, 43, 87, 177, 87, 177, 0, 60, 0, 147, 193, 0, 221, 43, 76, 179, 210, 171, 0, 60, 0, 147, 193, 0, 221, 171, 87, 49, 87, 49, 0, 60, 0, 63, 109, 0, 221, 171, 210, 43, 76, 51, 0, 60, 0, 63, 109, 0, 221, 43, 210, 43, 76, 51, 0, 60, 0, 63, 109, 0, 221, 43, 87, 49, 87, 49, 0, 60, 0, 63, 109, 0 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 1, 0, 4, 0, 3, 0, 4, 0, 6, 0, 5, 0, 6, 0, 8, 0, 7, 0, 8, 0, 10, 0, 9, 0, 10, 0, 2, 0, 11, 0, 1, 0, 2, 0, 4, 0, 4, 0, 8, 0, 6, 0, 8, 0, 2, 0, 10, 0, 4, 0, 2, 0, 8, 0, 12, 0, 14, 0, 13, 0, 13, 0, 16, 0, 15, 0, 16, 0, 18, 0, 17, 0, 18, 0, 20, 0, 19, 0, 20, 0, 22, 0, 21, 0, 22, 0, 14, 0, 23, 0, 13, 0, 14, 0, 16, 0, 16, 0, 20, 0, 18, 0, 20, 0, 14, 0, 22, 0, 16, 0, 14, 0, 20, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 40, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 56, 0, 58, 0, 57, 0, 56, 0, 59, 0, 58, 0, 60, 0, 62, 0, 61, 0, 60, 0, 63, 0, 62, 0, 64, 0, 66, 0, 65, 0, 64, 0, 67, 0, 66, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0 ),
"blend_shape_data": [  ],
"format": 98051,
"index_count": 132,
"name": "Material.001",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 72
}

[sub_resource type="ArrayMesh" id=3]
surfaces/0 = {
"aabb": AABB( -0.0614569, -0.228035, -0.228035, 0.122914, 0.45608, 0.45607 ),
"array_data": PoolByteArray( 221, 171, 76, 51, 210, 43, 0, 60, 130, 0, 0, 0, 221, 171, 76, 51, 210, 171, 0, 60, 130, 0, 0, 0, 221, 171, 87, 49, 87, 49, 0, 60, 130, 0, 0, 0, 221, 171, 87, 49, 87, 177, 0, 60, 130, 0, 0, 0, 221, 171, 210, 43, 76, 179, 0, 60, 130, 0, 0, 0, 221, 171, 210, 171, 76, 179, 0, 60, 130, 0, 0, 0, 221, 171, 87, 177, 87, 177, 0, 60, 130, 0, 0, 0, 221, 171, 76, 179, 210, 171, 0, 60, 130, 0, 0, 0, 221, 171, 76, 179, 210, 43, 0, 60, 130, 0, 0, 0, 221, 171, 87, 177, 87, 49, 0, 60, 130, 0, 0, 0, 221, 171, 210, 171, 76, 51, 0, 60, 130, 0, 0, 0, 221, 171, 210, 43, 76, 51, 0, 60, 130, 0, 0, 0, 221, 43, 76, 51, 210, 43, 0, 60, 127, 0, 0, 0, 221, 43, 87, 49, 87, 49, 0, 60, 127, 0, 0, 0, 221, 43, 76, 51, 210, 171, 0, 60, 127, 0, 0, 0, 221, 43, 210, 43, 76, 51, 0, 60, 127, 0, 0, 0, 221, 43, 210, 171, 76, 51, 0, 60, 127, 0, 0, 0, 221, 43, 87, 177, 87, 49, 0, 60, 127, 0, 0, 0, 221, 43, 76, 179, 210, 43, 0, 60, 127, 0, 0, 0, 221, 43, 76, 179, 210, 171, 0, 60, 127, 0, 0, 0, 221, 43, 87, 177, 87, 177, 0, 60, 127, 0, 0, 0, 221, 43, 210, 171, 76, 179, 0, 60, 127, 0, 0, 0, 221, 43, 210, 43, 76, 179, 0, 60, 127, 0, 0, 0, 221, 43, 87, 49, 87, 177, 0, 60, 127, 0, 0, 0, 221, 171, 87, 177, 87, 177, 0, 60, 0, 193, 147, 0, 221, 171, 210, 171, 76, 179, 0, 60, 0, 193, 147, 0, 221, 43, 210, 171, 76, 179, 0, 60, 0, 193, 147, 0, 221, 43, 87, 177, 87, 177, 0, 60, 0, 193, 147, 0, 221, 171, 210, 43, 76, 51, 0, 60, 0, 0, 126, 0, 221, 171, 210, 171, 76, 51, 0, 60, 0, 0, 126, 0, 221, 43, 210, 171, 76, 51, 0, 60, 0, 0, 126, 0, 221, 43, 210, 43, 76, 51, 0, 60, 0, 0, 126, 0, 221, 171, 210, 171, 76, 179, 0, 60, 0, 0, 129, 0, 221, 171, 210, 43, 76, 179, 0, 60, 0, 0, 129, 0, 221, 43, 210, 43, 76, 179, 0, 60, 0, 0, 129, 0, 221, 43, 210, 171, 76, 179, 0, 60, 0, 0, 129, 0, 221, 171, 210, 171, 76, 51, 0, 60, 0, 193, 109, 0, 221, 171, 87, 177, 87, 49, 0, 60, 0, 193, 109, 0, 221, 43, 87, 177, 87, 49, 0, 60, 0, 193, 109, 0, 221, 43, 210, 171, 76, 51, 0, 60, 0, 193, 109, 0, 221, 171, 210, 43, 76, 179, 0, 60, 0, 63, 147, 0, 221, 171, 87, 49, 87, 177, 0, 60, 0, 63, 147, 0, 221, 43, 87, 49, 87, 177, 0, 60, 0, 63, 147, 0, 221, 43, 210, 43, 76, 179, 0, 60, 0, 63, 147, 0, 221, 171, 87, 177, 87, 49, 0, 60, 0, 147, 63, 0, 221, 171, 76, 179, 210, 43, 0, 60, 0, 147, 63, 0, 221, 43, 76, 179, 210, 43, 0, 60, 0, 147, 63, 0, 221, 43, 87, 177, 87, 49, 0, 60, 0, 147, 63, 0, 221, 171, 87, 49, 87, 177, 0, 60, 0, 109, 193, 0, 221, 171, 76, 51, 210, 171, 0, 60, 0, 109, 193, 0, 221, 43, 76, 51, 210, 171, 0, 60, 0, 109, 193, 0, 221, 43, 87, 49, 87, 177, 0, 60, 0, 109, 193, 0, 221, 171, 76, 179, 210, 43, 0, 60, 0, 130, 0, 0, 221, 171, 76, 179, 210, 171, 0, 60, 0, 130, 0, 0, 221, 43, 76, 179, 210, 171, 0, 60, 0, 130, 0, 0, 221, 43, 76, 179, 210, 43, 0, 60, 0, 130, 0, 0, 221, 171, 76, 51, 210, 43, 0, 60, 0, 109, 63, 0, 221, 171, 87, 49, 87, 49, 0, 60, 0, 109, 63, 0, 221, 43, 87, 49, 87, 49, 0, 60, 0, 109, 63, 0, 221, 43, 76, 51, 210, 43, 0, 60, 0, 109, 63, 0, 221, 171, 76, 51, 210, 171, 0, 60, 0, 127, 0, 0, 221, 171, 76, 51, 210, 43, 0, 60, 0, 127, 0, 0, 221, 43, 76, 51, 210, 43, 0, 60, 0, 127, 0, 0, 221, 43, 76, 51, 210, 171, 0, 60, 0, 127, 0, 0, 221, 171, 76, 179, 210, 171, 0, 60, 0, 147, 193, 0, 221, 171, 87, 177, 87, 177, 0, 60, 0, 147, 193, 0, 221, 43, 87, 177, 87, 177, 0, 60, 0, 147, 193, 0, 221, 43, 76, 179, 210, 171, 0, 60, 0, 147, 193, 0, 221, 171, 87, 49, 87, 49, 0, 60, 0, 63, 109, 0, 221, 171, 210, 43, 76, 51, 0, 60, 0, 63, 109, 0, 221, 43, 210, 43, 76, 51, 0, 60, 0, 63, 109, 0, 221, 43, 87, 49, 87, 49, 0, 60, 0, 63, 109, 0 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 1, 0, 4, 0, 3, 0, 4, 0, 6, 0, 5, 0, 6, 0, 8, 0, 7, 0, 8, 0, 10, 0, 9, 0, 10, 0, 2, 0, 11, 0, 1, 0, 2, 0, 4, 0, 4, 0, 8, 0, 6, 0, 8, 0, 2, 0, 10, 0, 4, 0, 2, 0, 8, 0, 12, 0, 14, 0, 13, 0, 13, 0, 16, 0, 15, 0, 16, 0, 18, 0, 17, 0, 18, 0, 20, 0, 19, 0, 20, 0, 22, 0, 21, 0, 22, 0, 14, 0, 23, 0, 13, 0, 14, 0, 16, 0, 16, 0, 20, 0, 18, 0, 20, 0, 14, 0, 22, 0, 16, 0, 14, 0, 20, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 40, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 56, 0, 58, 0, 57, 0, 56, 0, 59, 0, 58, 0, 60, 0, 62, 0, 61, 0, 60, 0, 63, 0, 62, 0, 64, 0, 66, 0, 65, 0, 64, 0, 67, 0, 66, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0 ),
"blend_shape_data": [  ],
"format": 98051,
"index_count": 132,
"name": "Material.001",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 72
}

[sub_resource type="ArrayMesh" id=4]
surfaces/0 = {
"aabb": AABB( -0.061457, -0.228035, -0.228035, 0.122924, 0.45608, 0.45607 ),
"array_data": PoolByteArray( 221, 43, 76, 51, 210, 43, 0, 60, 127, 0, 0, 0, 221, 43, 87, 49, 87, 49, 0, 60, 127, 0, 0, 0, 221, 43, 76, 51, 210, 171, 0, 60, 127, 0, 0, 0, 221, 43, 210, 43, 76, 51, 0, 60, 127, 0, 0, 0, 221, 43, 210, 171, 76, 51, 0, 60, 127, 0, 0, 0, 221, 43, 87, 177, 87, 49, 0, 60, 127, 0, 0, 0, 221, 43, 76, 179, 210, 43, 0, 60, 127, 0, 0, 0, 221, 43, 76, 179, 210, 171, 0, 60, 127, 0, 0, 0, 221, 43, 87, 177, 87, 177, 0, 60, 127, 0, 0, 0, 221, 43, 210, 171, 76, 179, 0, 60, 127, 0, 0, 0, 221, 43, 210, 43, 76, 179, 0, 60, 127, 0, 0, 0, 221, 43, 87, 49, 87, 177, 0, 60, 127, 0, 0, 0, 221, 171, 76, 51, 210, 43, 0, 60, 130, 0, 0, 0, 221, 171, 76, 51, 210, 171, 0, 60, 130, 0, 0, 0, 221, 171, 87, 49, 87, 49, 0, 60, 130, 0, 0, 0, 221, 171, 87, 49, 87, 177, 0, 60, 130, 0, 0, 0, 221, 171, 210, 43, 76, 179, 0, 60, 130, 0, 0, 0, 221, 171, 210, 171, 76, 179, 0, 60, 130, 0, 0, 0, 221, 171, 87, 177, 87, 177, 0, 60, 130, 0, 0, 0, 221, 171, 76, 179, 210, 171, 0, 60, 130, 0, 0, 0, 221, 171, 76, 179, 210, 43, 0, 60, 130, 0, 0, 0, 221, 171, 87, 177, 87, 49, 0, 60, 130, 0, 0, 0, 221, 171, 210, 171, 76, 51, 0, 60, 130, 0, 0, 0, 221, 171, 210, 43, 76, 51, 0, 60, 130, 0, 0, 0, 221, 43, 87, 177, 87, 177, 0, 60, 0, 193, 147, 0, 221, 171, 87, 177, 87, 177, 0, 60, 0, 193, 147, 0, 221, 171, 210, 171, 76, 179, 0, 60, 0, 193, 147, 0, 221, 43, 210, 171, 76, 179, 0, 60, 0, 193, 147, 0, 221, 43, 210, 43, 76, 51, 0, 60, 0, 0, 126, 0, 221, 171, 210, 43, 76, 51, 0, 60, 0, 0, 126, 0, 221, 171, 210, 171, 76, 51, 0, 60, 0, 0, 126, 0, 221, 43, 210, 171, 76, 51, 0, 60, 0, 0, 126, 0, 221, 43, 210, 171, 76, 179, 0, 60, 0, 0, 129, 0, 221, 171, 210, 171, 76, 179, 0, 60, 0, 0, 129, 0, 221, 171, 210, 43, 76, 179, 0, 60, 0, 0, 129, 0, 221, 43, 210, 43, 76, 179, 0, 60, 0, 0, 129, 0, 221, 43, 210, 171, 76, 51, 0, 60, 0, 193, 109, 0, 221, 171, 210, 171, 76, 51, 0, 60, 0, 193, 109, 0, 221, 171, 87, 177, 87, 49, 0, 60, 0, 193, 109, 0, 221, 43, 87, 177, 87, 49, 0, 60, 0, 193, 109, 0, 221, 43, 210, 43, 76, 179, 0, 60, 0, 63, 147, 0, 221, 171, 210, 43, 76, 179, 0, 60, 0, 63, 147, 0, 221, 171, 87, 49, 87, 177, 0, 60, 0, 63, 147, 0, 221, 43, 87, 49, 87, 177, 0, 60, 0, 63, 147, 0, 221, 43, 87, 177, 87, 49, 0, 60, 0, 147, 63, 0, 221, 171, 87, 177, 87, 49, 0, 60, 0, 147, 63, 0, 221, 171, 76, 179, 210, 43, 0, 60, 0, 147, 63, 0, 221, 43, 76, 179, 210, 43, 0, 60, 0, 147, 63, 0, 221, 43, 87, 49, 87, 177, 0, 60, 0, 109, 193, 0, 221, 171, 87, 49, 87, 177, 0, 60, 0, 109, 193, 0, 221, 171, 76, 51, 210, 171, 0, 60, 0, 109, 193, 0, 221, 43, 76, 51, 210, 171, 0, 60, 0, 109, 193, 0, 221, 43, 76, 179, 210, 43, 0, 60, 0, 130, 0, 0, 221, 171, 76, 179, 210, 43, 0, 60, 0, 130, 0, 0, 221, 171, 76, 179, 210, 171, 0, 60, 0, 130, 0, 0, 221, 43, 76, 179, 210, 171, 0, 60, 0, 130, 0, 0, 221, 43, 76, 51, 210, 43, 0, 60, 0, 109, 63, 0, 221, 171, 76, 51, 210, 43, 0, 60, 0, 109, 63, 0, 221, 171, 87, 49, 87, 49, 0, 60, 0, 109, 63, 0, 221, 43, 87, 49, 87, 49, 0, 60, 0, 109, 63, 0, 221, 171, 76, 51, 210, 43, 0, 60, 0, 127, 0, 0, 221, 43, 76, 51, 210, 43, 0, 60, 0, 127, 0, 0, 221, 43, 76, 51, 210, 171, 0, 60, 0, 127, 0, 0, 221, 171, 76, 51, 210, 171, 0, 60, 0, 127, 0, 0, 221, 43, 76, 179, 210, 171, 0, 60, 0, 147, 193, 0, 221, 171, 76, 179, 210, 171, 0, 60, 0, 147, 193, 0, 221, 171, 87, 177, 87, 177, 0, 60, 0, 147, 193, 0, 221, 43, 87, 177, 87, 177, 0, 60, 0, 147, 193, 0, 221, 43, 87, 49, 87, 49, 0, 60, 0, 63, 109, 0, 221, 171, 87, 49, 87, 49, 0, 60, 0, 63, 109, 0, 221, 171, 210, 43, 76, 51, 0, 60, 0, 63, 109, 0, 221, 43, 210, 43, 76, 51, 0, 60, 0, 63, 109, 0 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 1, 0, 4, 0, 3, 0, 4, 0, 6, 0, 5, 0, 6, 0, 8, 0, 7, 0, 8, 0, 10, 0, 9, 0, 10, 0, 2, 0, 11, 0, 1, 0, 2, 0, 4, 0, 4, 0, 8, 0, 6, 0, 8, 0, 2, 0, 10, 0, 4, 0, 2, 0, 8, 0, 12, 0, 14, 0, 13, 0, 13, 0, 16, 0, 15, 0, 16, 0, 18, 0, 17, 0, 18, 0, 20, 0, 19, 0, 20, 0, 22, 0, 21, 0, 22, 0, 14, 0, 23, 0, 13, 0, 14, 0, 16, 0, 16, 0, 20, 0, 18, 0, 20, 0, 14, 0, 22, 0, 16, 0, 14, 0, 20, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 40, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 56, 0, 58, 0, 57, 0, 56, 0, 59, 0, 58, 0, 60, 0, 62, 0, 61, 0, 60, 0, 63, 0, 62, 0, 64, 0, 66, 0, 65, 0, 64, 0, 67, 0, 66, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0 ),
"blend_shape_data": [  ],
"format": 98051,
"index_count": 132,
"name": "Material.001",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 72
}

[sub_resource type="ArrayMesh" id=5]
surfaces/0 = {
"aabb": AABB( -0.061457, -0.228035, -0.228035, 0.122924, 0.45608, 0.45607 ),
"array_data": PoolByteArray( 221, 43, 76, 51, 210, 43, 0, 60, 127, 0, 0, 0, 221, 43, 87, 49, 87, 49, 0, 60, 127, 0, 0, 0, 221, 43, 76, 51, 210, 171, 0, 60, 127, 0, 0, 0, 221, 43, 210, 43, 76, 51, 0, 60, 127, 0, 0, 0, 221, 43, 210, 171, 76, 51, 0, 60, 127, 0, 0, 0, 221, 43, 87, 177, 87, 49, 0, 60, 127, 0, 0, 0, 221, 43, 76, 179, 210, 43, 0, 60, 127, 0, 0, 0, 221, 43, 76, 179, 210, 171, 0, 60, 127, 0, 0, 0, 221, 43, 87, 177, 87, 177, 0, 60, 127, 0, 0, 0, 221, 43, 210, 171, 76, 179, 0, 60, 127, 0, 0, 0, 221, 43, 210, 43, 76, 179, 0, 60, 127, 0, 0, 0, 221, 43, 87, 49, 87, 177, 0, 60, 127, 0, 0, 0, 221, 171, 76, 51, 210, 43, 0, 60, 130, 0, 0, 0, 221, 171, 76, 51, 210, 171, 0, 60, 130, 0, 0, 0, 221, 171, 87, 49, 87, 49, 0, 60, 130, 0, 0, 0, 221, 171, 87, 49, 87, 177, 0, 60, 130, 0, 0, 0, 221, 171, 210, 43, 76, 179, 0, 60, 130, 0, 0, 0, 221, 171, 210, 171, 76, 179, 0, 60, 130, 0, 0, 0, 221, 171, 87, 177, 87, 177, 0, 60, 130, 0, 0, 0, 221, 171, 76, 179, 210, 171, 0, 60, 130, 0, 0, 0, 221, 171, 76, 179, 210, 43, 0, 60, 130, 0, 0, 0, 221, 171, 87, 177, 87, 49, 0, 60, 130, 0, 0, 0, 221, 171, 210, 171, 76, 51, 0, 60, 130, 0, 0, 0, 221, 171, 210, 43, 76, 51, 0, 60, 130, 0, 0, 0, 221, 43, 87, 177, 87, 177, 0, 60, 0, 193, 147, 0, 221, 171, 87, 177, 87, 177, 0, 60, 0, 193, 147, 0, 221, 171, 210, 171, 76, 179, 0, 60, 0, 193, 147, 0, 221, 43, 210, 171, 76, 179, 0, 60, 0, 193, 147, 0, 221, 43, 210, 43, 76, 51, 0, 60, 0, 0, 126, 0, 221, 171, 210, 43, 76, 51, 0, 60, 0, 0, 126, 0, 221, 171, 210, 171, 76, 51, 0, 60, 0, 0, 126, 0, 221, 43, 210, 171, 76, 51, 0, 60, 0, 0, 126, 0, 221, 43, 210, 171, 76, 179, 0, 60, 0, 0, 129, 0, 221, 171, 210, 171, 76, 179, 0, 60, 0, 0, 129, 0, 221, 171, 210, 43, 76, 179, 0, 60, 0, 0, 129, 0, 221, 43, 210, 43, 76, 179, 0, 60, 0, 0, 129, 0, 221, 43, 210, 171, 76, 51, 0, 60, 0, 193, 109, 0, 221, 171, 210, 171, 76, 51, 0, 60, 0, 193, 109, 0, 221, 171, 87, 177, 87, 49, 0, 60, 0, 193, 109, 0, 221, 43, 87, 177, 87, 49, 0, 60, 0, 193, 109, 0, 221, 43, 210, 43, 76, 179, 0, 60, 0, 63, 147, 0, 221, 171, 210, 43, 76, 179, 0, 60, 0, 63, 147, 0, 221, 171, 87, 49, 87, 177, 0, 60, 0, 63, 147, 0, 221, 43, 87, 49, 87, 177, 0, 60, 0, 63, 147, 0, 221, 43, 87, 177, 87, 49, 0, 60, 0, 147, 63, 0, 221, 171, 87, 177, 87, 49, 0, 60, 0, 147, 63, 0, 221, 171, 76, 179, 210, 43, 0, 60, 0, 147, 63, 0, 221, 43, 76, 179, 210, 43, 0, 60, 0, 147, 63, 0, 221, 43, 87, 49, 87, 177, 0, 60, 0, 109, 193, 0, 221, 171, 87, 49, 87, 177, 0, 60, 0, 109, 193, 0, 221, 171, 76, 51, 210, 171, 0, 60, 0, 109, 193, 0, 221, 43, 76, 51, 210, 171, 0, 60, 0, 109, 193, 0, 221, 43, 76, 179, 210, 43, 0, 60, 0, 130, 0, 0, 221, 171, 76, 179, 210, 43, 0, 60, 0, 130, 0, 0, 221, 171, 76, 179, 210, 171, 0, 60, 0, 130, 0, 0, 221, 43, 76, 179, 210, 171, 0, 60, 0, 130, 0, 0, 221, 43, 76, 51, 210, 43, 0, 60, 0, 109, 63, 0, 221, 171, 76, 51, 210, 43, 0, 60, 0, 109, 63, 0, 221, 171, 87, 49, 87, 49, 0, 60, 0, 109, 63, 0, 221, 43, 87, 49, 87, 49, 0, 60, 0, 109, 63, 0, 221, 171, 76, 51, 210, 43, 0, 60, 0, 127, 0, 0, 221, 43, 76, 51, 210, 43, 0, 60, 0, 127, 0, 0, 221, 43, 76, 51, 210, 171, 0, 60, 0, 127, 0, 0, 221, 171, 76, 51, 210, 171, 0, 60, 0, 127, 0, 0, 221, 43, 76, 179, 210, 171, 0, 60, 0, 147, 193, 0, 221, 171, 76, 179, 210, 171, 0, 60, 0, 147, 193, 0, 221, 171, 87, 177, 87, 177, 0, 60, 0, 147, 193, 0, 221, 43, 87, 177, 87, 177, 0, 60, 0, 147, 193, 0, 221, 43, 87, 49, 87, 49, 0, 60, 0, 63, 109, 0, 221, 171, 87, 49, 87, 49, 0, 60, 0, 63, 109, 0, 221, 171, 210, 43, 76, 51, 0, 60, 0, 63, 109, 0, 221, 43, 210, 43, 76, 51, 0, 60, 0, 63, 109, 0 ),
"array_index_data": PoolByteArray( 0, 0, 2, 0, 1, 0, 1, 0, 4, 0, 3, 0, 4, 0, 6, 0, 5, 0, 6, 0, 8, 0, 7, 0, 8, 0, 10, 0, 9, 0, 10, 0, 2, 0, 11, 0, 1, 0, 2, 0, 4, 0, 4, 0, 8, 0, 6, 0, 8, 0, 2, 0, 10, 0, 4, 0, 2, 0, 8, 0, 12, 0, 14, 0, 13, 0, 13, 0, 16, 0, 15, 0, 16, 0, 18, 0, 17, 0, 18, 0, 20, 0, 19, 0, 20, 0, 22, 0, 21, 0, 22, 0, 14, 0, 23, 0, 13, 0, 14, 0, 16, 0, 16, 0, 20, 0, 18, 0, 20, 0, 14, 0, 22, 0, 16, 0, 14, 0, 20, 0, 24, 0, 26, 0, 25, 0, 24, 0, 27, 0, 26, 0, 28, 0, 30, 0, 29, 0, 28, 0, 31, 0, 30, 0, 32, 0, 34, 0, 33, 0, 32, 0, 35, 0, 34, 0, 36, 0, 38, 0, 37, 0, 36, 0, 39, 0, 38, 0, 40, 0, 42, 0, 41, 0, 40, 0, 43, 0, 42, 0, 44, 0, 46, 0, 45, 0, 44, 0, 47, 0, 46, 0, 48, 0, 50, 0, 49, 0, 48, 0, 51, 0, 50, 0, 52, 0, 54, 0, 53, 0, 52, 0, 55, 0, 54, 0, 56, 0, 58, 0, 57, 0, 56, 0, 59, 0, 58, 0, 60, 0, 62, 0, 61, 0, 60, 0, 63, 0, 62, 0, 64, 0, 66, 0, 65, 0, 64, 0, 67, 0, 66, 0, 68, 0, 70, 0, 69, 0, 68, 0, 71, 0, 70, 0 ),
"blend_shape_data": [  ],
"format": 98051,
"index_count": 132,
"name": "Material.001",
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 72
}

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.477039, 0.5, 1.16331 )

[node name="CarBase" type="Spatial"]
_import_path = NodePath(".")
__meta__ = {
"__editor_plugin_screen__": "3D"
}

[node name="Body" type="VehicleBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00169557, 0.222867, -0.0955184 )
physics_material_override = SubResource( 1 )
script = ExtResource( 1 )

[node name="Wheel1" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573678, 0.115169, 1.10416 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Wheel1" type="MeshInstance" parent="Body/Wheel1"]
_import_path = NodePath("BODY-vehicle/wheel1-wheel")
mesh = SubResource( 2 )
material/0 = ExtResource( 2 )

[node name="Wheel2" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.573678, 0.115169, -0.783403 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Wheel2" type="MeshInstance" parent="Body/Wheel2"]
_import_path = NodePath("BODY-vehicle/wheel2-wheel")
mesh = SubResource( 3 )
material/0 = ExtResource( 2 )

[node name="Wheel3" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.573678, 0.115169, 1.10416 )
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Wheel3" type="MeshInstance" parent="Body/Wheel3"]
_import_path = NodePath("BODY-vehicle/wheel3-wheel")
transform = Transform( 0.999999, -0.000324813, -0.000955621, 0.000325332, 1, 0.00054516, 0.000955445, -0.000545469, 0.999999, 0, 0, 0 )
mesh = SubResource( 4 )
material/0 = ExtResource( 2 )

[node name="Wheel4" type="VehicleWheel" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.573678, 0.115169, -0.783403 )
use_as_traction = true
wheel_roll_influence = 0.4
wheel_radius = 0.25
wheel_friction_slip = 1.0
suspension_travel = 2.0
suspension_stiffness = 40.0
damping_compression = 0.88

[node name="Wheel4" type="MeshInstance" parent="Body/Wheel4"]
_import_path = NodePath("BODY-vehicle/wheel4-wheel")
mesh = SubResource( 5 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.588269, 0.0774262 )
shape = SubResource( 6 )

[node name="CSGBox" type="CSGBox" parent="Body/CollisionShape"]
transform = Transform( 1, 7.46779e-05, -3.83869e-05, -7.47746e-05, 0.999996, -0.00271546, 3.81824e-05, 0.00271546, 0.999996, 0, -0.21963, 0 )
width = 0.853815
height = 0.338946
material = ExtResource( 3 )

[node name="CSGBox2" type="CSGBox" parent="Body/CollisionShape"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.170539, -0.412151 )
width = 0.68863
height = 0.338946
depth = 0.585077
material = ExtResource( 3 )

[node name="CameraBase" type="Spatial" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.97449, 0 )

[node name="Camera" type="Camera" parent="Body/CameraBase"]
transform = Transform( -0.709652, -0.170177, 0.683691, -2.11161e-08, 0.970391, 0.241539, -0.704552, 0.171409, -0.68864, 3.44908, 2.03236, -4.39379 )
current = true
fov = 74.0
near = 0.1
script = ExtResource( 4 )

[node name="hub" type="Control" parent="Body/CameraBase/Camera"]
margin_right = 1044.0
margin_bottom = 616.0

[node name="BotonIz" type="TextureButton" parent="Body/CameraBase/Camera/hub"]
margin_right = 490.0
margin_bottom = 610.0

[node name="BotonDe" type="TextureButton" parent="Body/CameraBase/Camera/hub"]
margin_left = 540.0
margin_right = 1033.0
margin_bottom = 610.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
_import_path = NodePath("AnimationPlayer")

